# nbp-api-rs

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml
src/: error.rs  exchange_rates.rs  lib.rs
tests/: exchange_rates.rs
