[package]
name = "nbp-api"
version = "0.1.0"
edition = "2021"

[dependencies]
iso_currency = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rust_decimal = "1.31"
serde = { version = "1.0", features = ["serde_derive"] }
thiserror = "1.0"
time = { version = "0.3", features = ["macros", "parsing"] }

[dev-dependencies]
regex = "1.9.3"
tokio = { version = "1.32.0", features = ["rt", "macros"] }
